# GamePulse

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT-DAGSTER.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json  team_colors_export.sh
backend/: Dockerfile  TEMPLATE_CLEANUP.md  TIMESCALEDB_NOTES.md  dagster.yaml  pyproject.toml  workspace.yaml
backend/app/: crud.py  dagster_definitions.py  initial_data.py  main.py  models.py  utils.py
backend/app/alembic/versions/: 001_initialize_item_model.py  0c51279163bd_add_game_period_to_fact_game.py  0f47137a7471_populate_dim_date_table.py  29a82f0b5d5b_create_multi_sport_schema.py  4152bfe2efaf_create_subreddit_dimensional_tables.py  61ebb6c6c0da_cleanup_legacy_test_data.py  7a8f23177a57_seed_dimensional_data.py  9fc66d903edb_fix_fact_game_schema_improvements.py  ac724facbab1_create_raw_reddit_posts_hypertable.py  bbbc5e8428a3_create_dim_keyword_and_migrate_.py  c2073349c669_fix_stg_social_posts_initialize_first_.py  e85b1a0dd26b_remove_item_table.py  (+8 more)
backend/app/api/: main.py
backend/app/assets/: bluesky_posts.py  cleanup_raw_posts.py  ncaa_games.py  quality_checks.py  reddit_posts.py  social_sentiment.py  transform_social_posts.py
backend/app/cli/: __init__.py  __main__.py  enrich_teams.py
backend/app/core/: config.py  db.py
backend/app/data/: README.md  __init__.py  conferences.json  seed_data.py  teams.json
backend/app/models/: __init__.py  dim_date.py  dim_team.py  fact_game.py  game.py  item.py  keywords.py  reddit.py  social.py  team.py
backend/app/resources/: database.py
backend/app/schemas/: game.py  health.py
backend/app/scripts/: __init__.py  seed_dim_date.py
backend/app/services/: __init__.py  bluesky_client.py  engagement.py  game_matcher.py  ncaa_client.py  reddit_client.py  rivalry_detector.py  sentiment_analyzer.py  team_enricher.py  team_sync.py
backend/app/tests/: conftest.py
backend/dagster_home/: .gitignore  dagster.yaml
backend/scripts/: create-env-from-aws-parameters.sh  load-secrets.sh  monitor_epic4_uptime.sql  prestart.sh  test_epic5_queries.sql  test_network_failure.sh  test_performance_games.sh
(+257 files in other folders)
