[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "emails>=0.6,<1.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "atproto>=0.0.63",
    "httpx>=0.27.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "structlog>=24.0.0,<25.0.0",
    "sqlmodel>=0.0.22,<1.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "dagster>=1.12.1",
    "dagster-webserver>=1.12.1",
    "dagster-postgres>=0.28.1",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "mypy>=1.11.0,<2.0.0",
    "ruff>=0.7.0,<1.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "coverage>=7.6.0,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "unit: Pure unit tests (no database)",
    "integration: Integration tests (requires database)",
]
